// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Llevaremos a cabo las pruebas de <GiftExpertApp /> deberia hacer match con GiftExpertApp 1`] = `
<Fragment>
  <h2>
    GiftExpertApp
  </h2>
  <hr />
  <AddCategory
    setCategories={[Function]}
  />
  <h2 />
</Fragment>
`;

exports[`Llevaremos a cabo las pruebas de <GiftExpertApp /> should show a list of categories  1`] = `
<Fragment>
  <h2>
    GiftExpertApp
  </h2>
  <hr />
  <AddCategory
    setCategories={[Function]}
  />
  <h2>
    <GiftGrid
      category="One Punch"
      key="One Punch"
    />
    <GiftGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </h2>
</Fragment>
`;
